--- a/.github/workflows/windowsservice.yml
+++ b/.github/workflows/windowsservice.yml
@@ -15,9 +15,12 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 5.0.x
-        -name: Run Powershell script   
-      - powershell: C:\Users\mshaik07\Desktop\windows-service-deployment.ps1
+          dotnet-version: 4.0.x
+      - name: Run Powershell script   
+        shell: pwsh
+        run: |
+          C:\Users\mshaik07\Desktop\windows-service-deployment.ps1
+      #- powershell: C:\Users\mshaik07\Desktop\windows-service-deployment.ps1
       # - name: Restore dependencies
       #   run: dotnet restore
       # - name: Build
