--- a/.github/workflows/windowsservice.yml
+++ b/.github/workflows/windowsservice.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: self-hosted
 
     steps:
       - uses: actions/checkout@v2
@@ -17,7 +17,7 @@ jobs:
         with:
           dotnet-version: 5.0.x
       - name: Run Powershell script   
-        shell: powershell
+        shell: pwsh
         run: |
           "C:\Users\mshaik07\Desktop\windows-service-deployment.ps1"
       #- powershell: C:\Users\mshaik07\Desktop\windows-service-deployment.ps1
