--- a/.github/workflows/windowsservice.yml
+++ b/.github/workflows/windowsservice.yml
@@ -18,8 +18,7 @@ jobs:
        #   dotnet-version: 5.0.x
       - name: Run Powershell script   
         shell: powershell
-        run: |
-          "C:\Users\mshaik07\Desktop\windows-service-deployment.ps1"
+        run: C:\Users\mshaik07\Desktop\windows-service-deployment.ps1
       #- powershell: C:\Users\mshaik07\Desktop\windows-service-deployment.ps1
       # - name: Restore dependencies
       #   run: dotnet restore
