--- a/.github/workflows/windowsservice.yml
+++ b/.github/workflows/windowsservice.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      #- name: Setup .NET
-       # uses: actions/setup-dotnet@v1
-       # with:
-       #   dotnet-version: 5.0.x
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 4.0
       - name: Run Powershell script   
         shell: powershell
         run: C:\Users\mshaik07\Desktop\windows-service-deployment.ps1
