--- a/.github/workflows/windowsservice.yml
+++ b/.github/workflows/windowsservice.yml
@@ -12,17 +12,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: '3.1.x'
+      #- name: Setup .NET
+      #  uses: actions/setup-dotnet@v1
+      #  with:
+       #   dotnet-version: '3.1.x'
       - name: Run Powershell script   
         shell: powershell
         run: C:\Users\mshaik07\Desktop\windows-service-deployment.ps1
       #- powershell: C:\Users\mshaik07\Desktop\windows-service-deployment.ps1
       # - name: Restore dependencies
       #   run: dotnet restore
-      # - name: Build
-      #   run: dotnet build --no-restore
+      - name: Build 
+        run: dotnet build --no-restore
       # - name: Test
       #   run: dotnet test --no-build --verbosity normal
