--- a/.github/workflows/windowsservice.yml
+++ b/.github/workflows/windowsservice.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Run Powershell script   
         shell: powershell
         run: C:\Users\mshaik07\Desktop\windows-service-deployment.ps1
-      - name: Build 
-        run: dotnet build --no-restore
+    #  - name: Build 
+        #run: dotnet build --no-restore
       - name: Copy executable
         shell: powershell
         run: Copy-Item -Path "C:\actions-runner\_work\SampleWindowsService\SampleWindowsService\bin\Debug\SampleWindowsService.exe" -Destination "C:\Users\mshaik07\source\repos\SampleWindowsService\bin\Debug" -Recurse -force
