--- a/.github/workflows/windowsservice.yml
+++ b/.github/workflows/windowsservice.yml
@@ -14,10 +14,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
-        with:
-          ssh-key: ''
-          ssh-strict: ''
-          dotnet-version: '3.1.x'
+        #with:
+         # ssh-key: ''
+          #ssh-strict: ''
+        #  dotnet-version: '3.1.x'
       - name: Run Powershell script   
         shell: powershell
         run: C:\Users\mshaik07\Desktop\windows-service-deployment.ps1
