Added powershell script file

--- a/SampleWindowsService.csproj
+++ b/SampleWindowsService.csproj
@@ -64,5 +64,8 @@
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="windows-service-deployment.ps1" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
